--- a/css/default/destino_salida.css
+++ b/css/default/destino_salida.css
@@ -232,11 +232,67 @@ input[type=checkbox] {
     border-width: 1px;s
  }
 
- div.cruise-count{
+
+  div.footer-dropdown-custom-small{
+    height: 56px;
+    background-color: rgb(250, 250, 250) ;
+    border-top-color:  rgb(232, 232, 232);
+    font-family: "Merriweather",sans-serif;
+    padding-left: 2px;
+    padding-right: 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;s
+       /*QUITAR*/
+    position: relative;
+    border-style: solid;
+    border-color: #d9d9d9;
+    border-width: 1px;s
+ }
+
+
+div.cruise-count{
     font-weight: 12px;
     text-align: left;
     width: 100%
 }
+
+div.cruise-count-small{
+    font-weight: 12px;
+    text-align: left;
+    width: 100%;
+    font-size: 12px;
+    display: flex;
+    padding-left: 9px;
+    padding-right: 9px;
+}
+
+div.cruise-count-small div.container-left-footer-small{
+    display: flex; 
+    width: 50%;
+}
+
+div.cruise-count-small div.container-right-footer-small{
+    display: flex; 
+    width: 50%; 
+    color: #0071A6;
+    font-size: 13px
+}
+
+div.cruise-count-small div.container-left-footer-small div.text-footer-small{
+    text-align: left; 
+    width: 100%
+}
+
+div.cruise-count-small div.container-right-footer-small div.container-input-small{
+    text-align: right; 
+    width: 100%
+}
+
+div.cruise-count-small div.container-right-footer-small div.container-input-small:hover{
+    color: #0D2236;
+    cursor: pointer;
+}
+
 
 .footer-option-custom{
     padding-left: 0%;
@@ -252,6 +308,8 @@ input[type=checkbox] {
 
 div.options-footer{
     text-align: right;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .select-dropdown-custom .dropdown-inner-custom-unico  li.option-custom-buttons{
@@ -495,11 +553,6 @@ div.option-custom-prueba div.checkbox-option-prueba{
       position: relative;
       border: 1px solid rgba(0, 0, 0, 0.15); 
 } 
-
-
-
-
-
 
 
 div.content-calendar-dropdown{
