--- a/css/default/Destinos.css
+++ b/css/default/Destinos.css
@@ -30,27 +30,36 @@
 
 .content-alternative-price{
     margin-left: 20px;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-right: 20px;
     display: flex;
 }
-.container-price{
-    width: 50%;
-    display: block;
+
+
+.content-alternative-price{
+    color:rgb(124, 124, 124);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+    text-align: auto;
+    display: flex;
+    padding-right: 5px;
+    padding-bottom: 10px;
+    border-bottom: 1px;
+    border-color: lightgray;
+    border-bottom-style: dotted;
 }
 
 
+
+/*Precio de crucero */
 .container-price .symbol-price{
     font-size: 12px;
     position: absolute;
     font-weight: 900;
+    color: black;
 }
 
-.container-view-all{
-    width: 60%;
-    display: flex;
-    text-align: right;
-}
 
 .alternative-price{
     color: black;
@@ -58,20 +67,87 @@
     font-weight: bold;   
 }
 
-alternative-money{
-    font-size: 12px;
-    font-weight: 700;
-    text-align: right;
-    
-    
-}
-.content-alternative-price p{
-    color:rgb(124, 124, 124);
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    text-align: left;
+.alternative-money{
+    color: black;
 }
 
 
+.container-view-price{
+    width: 20%;
+    text-align: center;
+    margin: auto;
+    
+}
+.container-price{
+    width: 80%;
+}
+
+.container-alternative-ship{
+    margin-left: 20px;
+    margin-top: 15px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    display: flex;    
+}
+
+.name-black{
+    color: black;
+    font-size: 11px;
+}
+
+.text-blue{
+    color: #81C8E8;
+}
+.span-text{
+    font-size: 11px;
+}
+.text-state{
+    font-size: 12px;
+    color:rgb(50, 50, 50);   
+}
+
+
+
+/*Botones*/
+
+.btn-detalles {
+    color: rgb(36, 95, 133);;
+    background-color: #fff;
+    border-color: rgb(36, 95, 133);
+    border-radius: 0px;
+    width: 100%;
+    height:40px;
+    font-family: inherit;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+
+.btn-reserva {
+    color: #fff;
+    background-color: #FF8309;
+    border-color: #FF8309;
+    border-radius: 0px;
+    width: 100%;
+    height:40px;
+    font-family: inherit;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.btn-reserva:hover{
+   background-color: #E17913;
+}
+
+
+.content-buttons{
+    display: flex; 
+    width: 100%;
+}
+
+.button-container-alternative{
+    width: 40%;
+    display: flex;  
+    margin: auto;
+}
 
