--- a/css/default/Destinos.css
+++ b/css/default/Destinos.css
@@ -75,7 +75,6 @@
     width: 20%;
     text-align: center;
     margin: auto;
-    
 }
 .container-price{
     width: 80%;
@@ -164,12 +163,12 @@
 }
 
 .social-media-share{
-    width: 60%;
+    width: 40%;
     margin-top: 20px;
     text-align: right;
 }
 .social-media-icons{
-    width:40%; 
+    width:60%; 
     display: flex;
 }
 .social-margin{
@@ -264,7 +263,7 @@
 /*BOTONES DE ABAJO*/
 
 .tail-select-custom-price{
-    width: 50%;
+    width: 70%;
     margin: auto;
     font-size: 14px;
     line-height: 40px;
@@ -401,6 +400,9 @@
     font-weight: 700;
     text-align: left; 
     width: 40%;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 20px;
 }
 
 .third-text-price-prom{
@@ -436,7 +438,7 @@
 
 .container-image-text-option{
     padding:10px;
-    width: 20%;
+    width: 30%;
 }
 
 .container-align-cruise-option{
@@ -468,3 +470,146 @@
 .container-option-cruise-arrow:hover{
     cursor:pointer;
 }
+
+
+/*TITULO*/
+
+.container-cruise-count{
+    display: inline-block;
+    width: 100%; 
+    text-align: center;
+    background-color:rgb(250, 250, 250)
+}
+
+.container-text-cruise{
+    padding-bottom: 5px; 
+    padding-top: 15px
+}
+
+.text-cruise{
+    font-size: 20px;
+    line-height: 16px;
+}
+
+.text-vacations{
+    font-size: 25px;
+    line-height: 20px;
+    padding: 0 15px; 
+    font-weight: 700
+}
+
+.container-counter{
+    padding-top: 15px;
+}
+
+.text-count{
+    display: block;
+    width: auto;
+    margin: -15px 0 15px;
+    padding: 0;
+    font-family: Georgia,serif;
+    font-size: 18px;
+    font-weight: 500;
+    font-style: italic;
+    text-align: center;
+    color: #323232;
+}
+
+.container-all{
+    display: flex;
+}
+
+.content-menu-right{
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+@media (min-width:350px){
+    .tail-select-custom-price{
+        width: 50%;
+    }
+    
+    .social-media-share{
+        width: 60%
+    }
+    .social-media-icons{
+        width: 40%;
+    }
+    
+   
+    
+}
+
+
+@media (min-width:600px){
+    .tail-select-custom-price{
+        width: 40%;
+    }
+    
+    .social-media-share{
+        width: 60%
+    }
+    .social-media-icons{
+        width: 40%;
+    }
+    
+    
+    
+}
+
+@media (min-width:800px){
+    
+    .all-content-cruise-options{
+        width: 60%;  
+    }
+    
+    .tail-select-custom-price{
+        width: 60%;
+    }
+    
+    .content-menu-right{
+        width: 40%;
+        display: block
+    }
+    .none{
+        display: none;
+    }
+}
+
+@media (min-width:1000px){
+    .all-content-cruise-options{
+        width: 70%;  
+    }
+    .content-all{
+        margin:20px;
+    }
+    
+    .cruise-alternative img{
+        max-height: 350px;
+    }
+    
+     .social-media-share{
+        width: 70%
+    }
+    .social-media-icons{
+        width: 30%;
+    }
+    
+    .tail-select-custom-price{
+        width: 40%;
+    }
+    
+    
+}
+
+
+
+
