--- a/css/default/Estilos.css
+++ b/css/default/Estilos.css
@@ -1,5 +1,6 @@
 @import url(Menu.css);
 @import url(Destinos.css);
+@import url(Popup.css);
 
 *{
     margin: 0 ;
@@ -11,6 +12,6 @@
     width: 100%;
     display: table;
     overflow-y: hidden;
-    color: rgb(0, 113, 166)
+    color: rgb(0, 113, 166);
 }
 
