--- a/css/default/destino_salida.css
+++ b/css/default/destino_salida.css
@@ -64,7 +64,7 @@ input[type=checkbox] {
     background-color: #FF8309;
     border-color: #FF8309;
     border-radius: 0px;
-    width: 305px;
+    width: 100%;
     height:60px;
     font-family: inherit;
     font-size: 15px;
@@ -92,6 +92,23 @@ input[type=checkbox] {
     /*border: 1px solid rgba(0,0,0,.125);*/
     
 }
+
+.card-custom-2 {
+    position: fixed;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: white !important; 
+    background-clip: border-box;
+}
+
+
 
 /* contenido personalizado de los dropdown  */
 /*PRIMER DROPDOWN (2 FILAS )*/
