--- a/css/default/Destinos.css
+++ b/css/default/Destinos.css
@@ -284,7 +284,6 @@
 
 .container-button-price-date{
    height: 60px; 
-   background-color: rgb(230, 230, 230); 
    display: flex
 }
 
@@ -324,8 +323,7 @@
 }
 
 .container-header-price-date{
-    border-top: 1px;
-    border-top-style: solid;
+    
     background-color: rgb(230,230,230);
 }
 
@@ -359,17 +357,6 @@
     font-size: 12px;
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-
-.container-options-white{
-    border-top: 1px;
-    border-top-style: solid;
-    background-color: #fff;
-    border-bottom-style: solid;
-    border-bottom-color: rgb(50,50,50);
-    border-bottom-width: 1px;
-    
 }
 
 .second-option-person-price{
@@ -527,7 +514,7 @@
 
 
 
-
+/*CONTENIDO RESPONSIVE*/
 
 
 
@@ -567,6 +554,13 @@
 
 @media (min-width:800px){
     
+    .container-all{
+        maring:4% 4%;
+    }
+    .container-all{
+        margin: 0% 3%;
+    }
+    
     .all-content-cruise-options{
         width: 60%;  
     }
@@ -582,6 +576,14 @@
     .none{
         display: none;
     }
+    
+    body{
+        background-color: rgb(250,250,250);
+    }
+    .card-body{
+        background-color: rgb(250,250,250);
+    }
+    
 }
 
 @media (min-width:1000px){
@@ -606,10 +608,74 @@
     .tail-select-custom-price{
         width: 40%;
     }
+    .container-all{
+        margin: 20px;
+        background-color: rgb(250,250,250);
+    }
     
+     body{
+        background-color: rgb(250,250,250);
+    }
+    .card-body{
+        background-color: rgb(250,250,250);
+    }
     
 }
 
+
+@media (min-width:1200px){
+    .container-all{
+        background-color: rgb(250,250,250);
+    }
+    
+    body{
+        background-color: rgb(250,250,250);
+    }
+    .card-body{
+        background-color: rgb(250,250,250);
+    }
+    
+    .container-all{
+        margin-left: 10%;    
+        margin-right:10%;
+    }
+    
+    .all-content-cruise-options{
+        width: 70%;  
+    }
+    .card-custom-2{
+        width: 30%;
+    }
+}
+
+
+@media (min-width:1400px){
+    .container-all{
+        margin-left: 10%;    
+        margin-right:10%;
+    }
+    
+    .all-content-cruise-options{
+        width: 70%;  
+    }
+    .card-custom-2{
+        width: 30%;
+    }
+}
+
+@media (min-width:1600px){
+    .container-all{
+        margin-left: 10%;    
+        margin-right:10%;
+    }
+    
+    .all-content-cruise-options{
+        width: 70%;  
+    }
+    .card-custom-2{
+        width: 20%;
+    }
+}
 
 
 
