--- a/css/default/Destinos.css
+++ b/css/default/Destinos.css
@@ -555,12 +555,9 @@
 @media (min-width:800px){
     
     .container-all{
-        maring:4% 4%;
+        margin:4% 4%;
     }
-    .container-all{
-        margin: 0% 3%;
-    }
-    
+
     .all-content-cruise-options{
         width: 60%;  
     }
@@ -583,6 +580,7 @@
     .card-body{
         background-color: rgb(250,250,250);
     }
+    
     
 }
 
@@ -619,6 +617,10 @@
     .card-body{
         background-color: rgb(250,250,250);
     }
+    .container-all{
+        margin-left: 10%;    
+        margin-right:10%;
+    }
     
 }
 
@@ -636,16 +638,26 @@
     }
     
     .container-all{
-        margin-left: 10%;    
-        margin-right:10%;
+        margin-left: 20%;    
+        margin-right:20%;
     }
     
     .all-content-cruise-options{
         width: 70%;  
     }
-    .card-custom-2{
-        width: 30%;
+   
+    
+     .social-media-share{
+        width: 60%
     }
+    .social-media-icons{
+        width: 40%;
+    }
+    
+    .tail-select-custom-price{
+        width: 50%;
+    }
+    
 }
 
 
@@ -658,9 +670,7 @@
     .all-content-cruise-options{
         width: 70%;  
     }
-    .card-custom-2{
-        width: 30%;
-    }
+   
 }
 
 @media (min-width:1600px){
@@ -672,9 +682,7 @@
     .all-content-cruise-options{
         width: 70%;  
     }
-    .card-custom-2{
-        width: 20%;
-    }
+    
 }
 
 
