--- a/css/default/Destinos.css
+++ b/css/default/Destinos.css
@@ -1,6 +1,6 @@
 .cruise-alternative img{
     width: 100%;
-    max-height: 250px;
+    max-height: 25%;
 }
 
 .cruise-alternative a{
@@ -558,10 +558,7 @@
 
 @media (min-width:800px){
     
-    .container-all{
-        margin:4% 4%;
-    }
-
+    
     .all-content-cruise-options{
         width: 60%;  
     }
@@ -585,6 +582,10 @@
         background-color: rgb(250,250,250);
     }
     
+    .container-all{
+        margin-left: 5%;    
+        margin-right:5%;
+    }
     
 }
 
@@ -611,7 +612,6 @@
         width: 60%;
     }
     .container-all{
-        margin: 20px;
         background-color: rgb(250,250,250);
     }
     
@@ -686,6 +686,35 @@
     .all-content-cruise-options{
         width: 70%;  
     }
+    
+    
+    
+    @media (min-width:1400px){
+    .container-all{
+        margin-left: 10%;    
+        margin-right:10%;
+    }
+    
+    .all-content-cruise-options{
+        width: 70%;  
+    }
+   
+}
+
+@media (min-width:1800px){
+    .container-all{
+        margin-left: 20%;    
+        margin-right:20%;
+    }
+    
+    
+    .social-media-share{
+        width: 70%
+    }
+    .social-media-icons{
+        width: 30%;
+    }
+    
     
 }
 
